--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -6,7 +6,17 @@
       <h3><%= link_to product.name, product %></h3>
       <p>Price: <%= number_to_currency product.price_cents / 100.0 %></p>
       <p><%= product.description %></p>
-      <%= hidden_field_tag(:id,product.id) %>
-      <%= button_tag 'Add to cart ✅' %>
+
+      <% if cart.include?(product) %>
+        <%= button_to cart_path(product), method: :delete do%>
+          ➖ Remove From cart
+        <% end %>
+      <% else %>
+        <%= form_with url: cart_index_path, method: :post do%>
+          <%= hidden_field_tag(:id,product.id) %>
+          <%= button_tag 'Add to cart ✅' %>
+        <% end %>
+      <% end %>
+
     <% end %>
   </aside>
